[package]
name = "fw16-pong-wars"
version = "1.0.2"
edition = "2021"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
serialport = "4.5"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = 3
codegen-units = 1

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[dev-dependencies]
